Correct single-string cuttoff with word-wrap: break-word in article-tweet css selector

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -86,6 +86,7 @@ article.tweet {
   overflow: hidden;
   opacity: 0.6;
   width: 400px;
+  word-wrap: break-word;
   z-index: 2;
 }
 article.tweet .tweet:hover {
